removed provider column in expenses details + fix display issue in case too much expenses

--- a/src/app/components/expense-table/expense-table.component.scss
+++ b/src/app/components/expense-table/expense-table.component.scss
@@ -1,6 +1,7 @@
 @import "../../../styles/variables";
 .expenses-table-cont {
   position: relative;
+  max-height: 270px;
 
   .expenses-table {
     th,
